<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosbag_overlap</name>
  <version>0.0.0</version>
  <description>TODO</description>

  <maintainer email="jonathan.lichtenfeld@gmail.com">Jonathan</maintainer>
  <license>TODO</license>
  <author email="jonathan.lichtenfeld@gmail.com">Jonathan</author>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
